# Recommender-BPR-tensors

./: .gitignore  README.md  mitmap_tenzori_projekt.ipynb  pyproject.toml  requirements.txt
Example/: delicious.py
TagRecommender/: __init__.py  bazniModel.py  data.py  metrike.py  uzorkovanje.py
TagRecommender/modeli/: cp.py  pitf.py  tucker.py
